--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,18 +4,21 @@ logging:
     org.hibernate: warn
 spring:
   datasource:
-    platform: mariadb
     url: jdbc:mariadb://localhost:3306/sfg_dev
     username: sfg_dev_user
     password: guru
   jpa:
     hibernate:
+      use-new-id-generator-mappings: false
       ddl-auto: validate
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-#    database-platform: org.hibernate.dialect.MariaDB106Dialect : WON'T WORK CANNOT FIND DEFINITION
+#    database-platform: org.hibernate.dialect.MariaDB105Dialect
     database: mysql
     show-sql: false
     # ENABLE BELOW TO CREATE NEW ADD AND DROP SCRIPTS
+  sql:
+    init:
+      platform: mariadb
 #    properties:
 #      javax:
 #        persistence:
